...
} from '../components/WeatherListItem';
import {RootStackParamList} from '../types/RootStackTypes';
import {tempUnit} from '../utilities/unitsUtilities';

export type HomeScreenProps = NativeStackScreenProps<
  RootStackParamList,
  'Weather'
>;

function HomeScreen({navigation}: HomeScreenProps) {
  const cities = useWeatherStore(state => state.cities);
  const loading = useWeatherStore(state => state.loading);
  const defaultUnits = useWeatherStore(state => state.defaultUnits);
...
    <FlatList
      data={data}
      renderItem={renderItem}
      keyExtractor={i => `${i.id}`}
      refreshing={loading}
      onRefresh={refreshData}
      testID="cities-list"
    />
  );
}

export default HomeScreen;

