export enum CITIES_LIST {
  Paris = 2988507,
  Madrid = 3117735,
  LosAngeles = 5368361,
  Boston = 4930956,
  NewYork = 5128581,
  Singapore = 1880252,
  Cracow = 3094802,
  Wroclaw = 3081368,
}
